# haggler

./: .gitignore  README.md
client/: package-lock.json
client/src/: config.ts
client/src/app/: page.tsx  setSinkIdPatch.ts
client/src/app/components/: App.tsx
daily/: README.md
daily/client/: package.json
daily/server/: .env.example  bot.py  pyproject.toml
docs/: REFINEMENT_LOOP.md
haggler/: README.md
haggler/client/: package-lock.json  package.json
haggler/server/: .env.example  bot.py  pyproject.toml
haggler/server/scripts/: log_outcome.py  seed_tactics.py
k-new/: README.md
k-new/server/: .env.example  bot.py  pyproject.toml
realtime/server/: bot.py  pyproject.toml
server/: .env.example  bot.py  outcome.py  pyproject.toml  tactic_vectors.py
server/scripts/: add_tactics.py  check_redis_improvement.py  list_trajectories.py  run_outcome_eval.py
