[project]
name = "haggler"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "pipecat-ai[google,runner,silero,webrtc]",
    "weave",
    "redis>=5.0",
    "sentence-transformers>=3.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]